--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       type="text/javascript"
       src="https://s3.tradingview.com/tv.js"
     ></script>
-    <title>cTrader App</title>
+    <title>Zistilo Forex App</title>
   </head>
   <body>
     <div id="root"></div>
